traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while(!posFinale()) snake()
        ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if(!estFaceMur()) return false
                           ^Snake:20: warning: enclosing method posFinale has result type Unit: return value discarded
  if(!estFaceMur()) return false
                    ^Snake:25: warning: enclosing method posFinale has result type Unit: return value discarded
    return(rep)
    ^